--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,4 +93,5 @@
     <string name="select_items">Select Items</string>
     <string name="import_csv">Import CSV</string>
     <string name="export_csv">Export CSV</string>
+    <string name="auto_backup">Auto Backup</string>
 </resources>
