--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,4 +94,7 @@
     <string name="import_csv">Import CSV</string>
     <string name="export_csv">Export CSV</string>
     <string name="auto_backup">Auto Backup</string>
+    <string name="auto_backup_enabled">Auto Backup Enabled</string>
+    <string name="no_directory_selected">No directory selected</string>
+    <string name="select_directory">Select Directory</string>
 </resources>
