- Fix app bar fragment name - Add modify future transaction fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,4 +97,5 @@
     <string name="auto_backup_enabled">Auto Backup Enabled</string>
     <string name="no_directory_selected">No directory selected</string>
     <string name="select_directory">Select Directory</string>
+    <string name="apply_transaction_now">Apply Transaction Now</string>
 </resources>
