- Working on currencies - Update categories display - Move category setup to settings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,4 +98,5 @@
     <string name="no_directory_selected">No directory selected</string>
     <string name="select_directory">Select Directory</string>
     <string name="apply_transaction_now">Apply Transaction Now</string>
+    <string name="manage_categories">Manage Categories</string>
 </resources>
