--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,4 +99,12 @@
     <string name="select_directory">Select Directory</string>
     <string name="apply_transaction_now">Apply Transaction Now</string>
     <string name="manage_categories">Manage Categories</string>
+    <string name="currency_code">Currency Code</string>
+    <string name="conversion_factor">Conversion Factor</string>
+    <string name="manage_currencies">Manage Currencies</string>
+    <string name="set_change_primary_account">Set/Change Primary Account</string>
+    <string name="add_edit_currencies">Add/Edit Currencies</string>
+    <string name="primary_currency">Primary Currency</string>
+    <string name="delete_currency">Delete Currency</string>
+    <string name="clear_all_currency_data_debug">Clear All Currency Data (Debug)</string>
 </resources>
