- Added account close and do not show in dropdown

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,4 +107,6 @@
     <string name="primary_currency">Primary Currency</string>
     <string name="delete_currency">Delete Currency</string>
     <string name="clear_all_currency_data_debug">Clear All Currency Data (Debug)</string>
+    <string name="closed_account">Closed Account</string>
+    <string name="do_not_show_in_accounts_dropdown">Do not show in accounts dropdown</string>
 </resources>
