--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,4 +110,5 @@
     <string name="closed_account">Closed Account</string>
     <string name="do_not_show_in_accounts_dropdown">Do not show in accounts dropdown</string>
     <string name="show_hide_closed_accounts">Show/Hide Closed Accounts</string>
+    <string name="filter_parameters">Filter Parameters</string>
 </resources>
