--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -127,4 +127,5 @@
     <string name="no_file_selected">No file selected</string>
     <string name="upload_and_process">Upload and Process</string>
     <string name="new_item">New Item</string>
+    <string name="saved_reports">Saved Reports</string>
 </resources>
