--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,4 +130,5 @@
     <string name="saved_reports">Saved Reports</string>
     <string name="export_schedules_csv">Export Schedules CSV</string>
     <string name="import_schedules_csv">Import Schedules CSV</string>
+    <string name="test_fragment">Test Fragment</string>
 </resources>
