--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -131,4 +131,5 @@
     <string name="export_schedules_csv">Export Schedules CSV</string>
     <string name="import_schedules_csv">Import Schedules CSV</string>
     <string name="test_fragment">Test Fragment</string>
+    <string name="select_qif_file">Select QIF File</string>
 </resources>
