- Change FAB from Accounts to create transaction - Added a menu item to create account

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,4 +133,5 @@
     <string name="test_fragment">Test Fragment</string>
     <string name="select_qif_file">Select QIF File</string>
     <string name="select_csv_file">Select CSV File</string>
+    <string name="create_new_account">Create New Account</string>
 </resources>
